src/css/main.scss
/* ... */
.content--interactive .content__headline {
    max-width: 600px!important;
    font-weight: 600;
    padding-bottom: 24px;
      //@include mq(leftCol) {
         //max-width: 600px!important;
    //}
}

.content--interactive .content__standfirst {
    max-width: 80%!important;
    font-weight: 300!important;
    a {
        border-bottom: none!important;
    }
    @include mq(tablet) {
      max-width: 390px!important;
    }
    @include mq(desktop) {
      max-width: 440px!important;
    }
     @include mq(wide) {
         max-width: 500px!important;
    }
}


.element-atom,
.interactive-atom {
    margin: 0 !important; //background-color: $multimedia-support-4;
    //background-color: #ebebeb;
    height: auto; //overflow:hidden;

    @include mq(desktop) {
        //overflow:visible;
    }
}

.interactive-ad-banner {
    display: flex;
    justify-content: center; //margin-top: -20px!important;

    @include mq($from: tablet) {
        .ad-slot--rendered {
            margin: 0 0 80px 0;
        }
    }
}




#gv-mobile-dummy {
    position: absolute;
    display: block;
    @include mq(desktop) {
        display: none;
    }
}

.gv-no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

select:focus {
    outline: none;
}

.gv-wrap-all {
    position: relative; //overflow:hidden;
    width: 100%;
    max-width: 1300px;
    vertical-align: top;
    margin: 0 auto;
    min-height: 100vh;
    border-top: 1px solid #fff;
    margin-top: 1px;

    @include mq(tablet) {
       margin-top: 0;

        &:before {
            content: "";
            display: block;
            position: absolute;
            color: #fff;
            top: -1px;
            margin-top: -220px;
            width: 99%;
            height: 220px;
            pointer-events: none;
            //background-image: url('<%= path %>/assets/header-image-world.png');
            //background-image: url('<%= path %>/assets/onehundred.svg');
            background-image: url('<%= path %>/assets/header-image-5.png');
            background-repeat: no-repeat;
            background-position: right bottom;
            background-size: auto 100%;
        }
    }

    @include mq(desktop) {
        &:before {
            top: -1px;
            margin-top: -319px;
            width: 99%;
            height: 320px;

        }
    }

    @include mq(wide) {
        &:before {
            margin-top: -339px;
            height: 340px;

        }
    }
}

.gv-views-wrapper {
    position: relative;
    overflow: hidden;
    z-index: 1;
    // border-right: 1px solid $accent-blue-dark;

    @include mq(desktop) {
        &:before {
            content: "";
            display: block;
            width: 1px;
            height: 100%;
            border-right: 1px solid $accent-blue-dark;
            position: absolute;
            right: 0;
            top: 0;
            z-index: 300;
        }
        &:after {
            content: "";
            display: block;
            width: 50px;
            height: 100%;
            background: #dcdcdc;
            border-right: 1px solid $accent-blue-dark;

            background-color: #fff;
            position: absolute;
            left: 0;
            top: 0;
            z-index: 2;
        }
    }
}
/* ... */

